Hotfix to support placeholder to set port in RemoteManager implementations